 qt: DecryptVerifyArchiveJob                NEW.
 qt: EncryptArchiveJob                      NEW.
 qt: SignArchiveJob                         NEW.
 qt: SignEncryptArchiveJob                  NEW.
 qt: Protocol::decryptVerifyArchiveJob      NEW.
 qt: Protocol::encryptArchiveJob            NEW.
 qt: Protocol::signArchiveJob               NEW.
 qt: Protocol::signEncryptArchiveJob        NEW.

 Release-info: https://dev.gnupg.org/T6341


Noteworthy changes in version 1.18.0 (2022-08-10)
-------------------------------------------------

 * New keylist mode to force refresh via external methods.  [T5951]

 * The keylist operations now create an import result to report the
   result of the locate keylist modes.  [T5951]

 * core: Return BAD_PASSPHRASE error code on symmetric decryption
   failure.  [T5939]

 * cpp, qt: Do not export internal symbols anymore.  [T5906]

 * cpp, qt: Support revocation of own OpenPGP keys.  [T5904]

 * qt: The file name of (signed and) encrypted data can now be set.  [T6056]

 * cpp, qt: Support setting the primary user ID.  [T5938]

 * python: Fix segv(NULL) when inspecting contect after exeception.  [T6060]

 * Interface changes relative to the 1.17.1 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 GPGME_KEYLIST_MODE_FORCE_EXTERN            NEW.
 GPGME_KEYLIST_MODE_LOCATE_EXTERNAL         NEW.
 cpp: RevocationReason                      NEW.
 cpp: GpgRevokeKeyEditInteractor            NEW.
 cpp: Result::setError                      NEW.
 cpp: KeyListMode::ForceExtern              NEW.
 cpp: KeyListMode::LocateExternal           NEW.
 cpp: KeyListMode::KeyListModeMask          NEW.
 cpp: ImportResult::mergeWith               NEW.
 cpp: KeyListModeSaver                      NEW.
 cpp: Context::setPrimaryUid                NEW.
 cpp: Context::startSetPrimaryUid           NEW.
 qt: RevokeKeyJob                           NEW.
 qt: Protocol::revokeKeyJob                 NEW.
 qt: EncryptJob::setFileName                NEW.