@@ -69,6 +69,9 @@ Noteworthy changes in version 1.19.0 (unreleased)
  qt: Protocol::encryptArchiveJob            NEW.
  qt: Protocol::signArchiveJob               NEW.
  qt: Protocol::signEncryptArchiveJob        NEW.
+ qt: Job::jobProgress                       NEW.
+ qt: Job::rawProgress                       NEW.
+ qt: Job::progress                          DEPRECATED.
 
  Release-info: https://dev.gnupg.org/T6341
 
